src/objects/Account_Supplement__c.object
<CustomObject>
    <description>This object is created for generic purpose and it mainly tied to LDC Account</description>
    <fields>
        <fullName>Active__c</fullName>
        <formula>AND( IF(Start_Date__c &lt;= TODAY(), True, false) , IF( End_Date__c &lt;= TODAY(), false, true) )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date__c</fullName>
        <description>This field is added to track the approval/rejected date</description>
        <inlineHelpText>This field will get auto populated when it is approved</inlineHelpText>
        <label>Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Approval_Status__c</fullName>
        <description>This field is created to show the status of Approval requested</description>
        <inlineHelpText>Once tax department approves it will be auto populated with status</inlineHelpText>
        <label>Approval Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>Approved</fullName>
                </value>
                <value>
                    <fullName>Rejected</fullName>
                </value>
                <value>
                    <fullName>Recalled</fullName>
                </value>
                <value>
                    <fullName>Submitted for Approval</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Approved_By__c</fullName>
        <description>This field is created to store the Name of person who approved</description>
        <inlineHelpText>Approved user name</inlineHelpText>
        <label>Approved By</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <description>This field is created to store the end date</description>
        <inlineHelpText>Enter the End Date</inlineHelpText>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exemption_Type__c</fullName>
        <description>This Picklist is created to store Exemption type based on Type of  record</description>
        <inlineHelpText>Please select appropriate exemption type</inlineHelpText>
        <label>Exemption Type</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Type__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A -- Instrumentality of the Commonwealth</fullName>
                </value>
                <value>
                    <fullName>B -- Political Subdivision of the Commonwealth</fullName>
                </value>
                <value>
                    <fullName>C -- Municipal Authority created under the Municipality Authorities Act</fullName>
                </value>
                <value>
                    <fullName>D -- Electric cooperative corporations created under the Electric Cooperative Law of 1990</fullName>
                </value>
                <value>
                    <fullName>E -- Cooperative agricultural associations required to pay corporate net income tax under the Cooperative Agricultural Association Corporate Net Income Tax Act (exemption not valid for registered vehicles)</fullName>
                </value>
                <value>
                    <fullName>F -- Credit Unions organized under Federal Credit Union Act or Commonwealth Credit Union Act</fullName>
                </value>
                <value>
                    <fullName>G -- U.S. Government, its agencies and instrumentalities</fullName>
                </value>
                <value>
                    <fullName>H -- Property and/or service will be resold or re-rented in the ordinary course of the purchasers business</fullName>
                </value>
                <value>
                    <fullName>I -- Religious Organization</fullName>
                </value>
                <value>
                    <fullName>J -- Volunteer Fireman&apos;s Organization</fullName>
                </value>
                <value>
                    <fullName>K -- Nonprofit Educational Organization</fullName>
                </value>
                <value>
                    <fullName>L -- Charitable Organization</fullName>
                </value>
                <value>
                    <fullName>M -- School District</fullName>
                </value>
                <value>
                    <fullName>N -- Direct Pay Permit Holder</fullName>
                </value>
                <value>
                    <fullName>O -- Individual Holding Diplomatic ID</fullName>
                </value>
                <value>
                    <fullName>P -- Keystone Opportunity Zone</fullName>
                </value>
                <value>
                    <fullName>Q -- Tourist Promotion Agency</fullName>
                </value>
                <value>
                    <fullName>R -- Sales for Resale</fullName>
                </value>
                <value>
                    <fullName>A -- Gross receipts from the sale of electricity that are attributable to replacement energy costs, clean-up and decontamination costs, and investment write-off costs of a nuclear generating facility damaged as a result of an accident or natural disaster</fullName>
                </value>
                <value>
                    <fullName>O -- Gross receipts derived from business done inside the limits of a municipality which owns or operates a public utility or furnishes the public utility service.</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>GRT_Category__c</fullName>
        <inlineHelpText>Translated as a-K in the order of picklist</inlineHelpText>
        <label>GRT Category</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>A -- Residential Sales</fullName>
                </value>
                <value>
                    <fullName>B -- Commercial and Industrial Sales</fullName>
                </value>
                <value>
                    <fullName>C -- Public Street and safety Lightning</fullName>
                </value>
                <value>
                    <fullName>D -- Other Sales to Public Authorities</fullName>
                </value>
                <value>
                    <fullName>E -- Sales to Railroads &amp; Railways</fullName>
                </value>
                <value>
                    <fullName>F -- Sales for Resale</fullName>
                </value>
                <value>
                    <fullName>G -- Provisions for Rate Refunds</fullName>
                </value>
                <value>
                    <fullName>H -- Miscellaneous Service Revenues</fullName>
                </value>
                <value>
                    <fullName>I -- Other Electric Revenues</fullName>
                </value>
                <value>
                    <fullName>J -- Revenue from Transmission of Electricity of Others</fullName>
                </value>
                <value>
                    <fullName>K -- Regional Transmission Service Revenues</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LDC_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is created to setup relationship between LDC account and Account Supplement</description>
        <inlineHelpText>Select LDC Account</inlineHelpText>
        <label>LDC Account</label>
        <referenceTo>LDC_Account__c</referenceTo>
        <relationshipLabel>Tax Exemptions</relationshipLabel>
        <relationshipName>Account_Supplements1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Percentage__c</fullName>
        <description>This field is created to store the percentage of the exemption record</description>
        <inlineHelpText>Enter the Percentage</inlineHelpText>
        <label>Percentage</label>
        <precision>5</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Sale_Intrasate_Revenue__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Sale Intrasate Revenue defaulted to true</description>
        <label>Sale Intrasate Revenue</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Type__c</fullName>
        <inlineHelpText>This picklist still needs to be defined as of now</inlineHelpText>
        <label>Sales Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Deposit</fullName>
                </value>
                <value>
                    <fullName>Merchandise</fullName>
                </value>
                <value>
                    <fullName>Appliances</fullName>
                </value>
                <value>
                    <fullName>Installation Fees</fullName>
                </value>
                <value>
                    <fullName>Sales</fullName>
                </value>
                <value>
                    <fullName>Rental or Repair Costs</fullName>
                </value>
                <value>
                    <fullName>Meter Testing Fees</fullName>
                </value>
                <value>
                    <fullName>Line Extension Costs</fullName>
                </value>
                <value>
                    <fullName>Special Construction Charges</fullName>
                </value>
                <value>
                    <fullName>Warranty Programs</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <description>This field is created to store the start date</description>
        <inlineHelpText>Enter the start date</inlineHelpText>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <description>This field is created to store the type of exemption</description>
        <inlineHelpText>Select the Type of exemption</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Tax_GRT_Exemption</fullName>
                </value>
                <value>
                    <fullName>Tax_Sales_Exemption</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>URL__c</fullName>
        <description>This field is created to store the document URL</description>
        <inlineHelpText>Enter the document URL for exemption</inlineHelpText>
        <label>URL</label>
        <type>Url</type>
    </fields>
    <label>Account Supplement</label>
    <listViews>
        <fullName>Tax_Approval_Queue_Account_Supplement</fullName>
        <filterScope>Queue</filterScope>
        <label>Tax Approval Queue</label>
        <queue>Tax_Approval_Queue</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>AS-{0000000}</displayFormat>
        <label>AS Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Supplements</pluralLabel>
    <recordTypes>
        <fullName>GRT</fullName>
        <active>true</active>
        <description>This record type is used to store GRT for PA</description>
        <label>GRT</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Exemption</fullName>
        <active>true</active>
        <description>This record type is used to store Tax Exemptions for PA</description>
        <label>Tax Exemption</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Percent_is_Greater_than_1</fullName>
        <active>true</active>
        <errorConditionFormula>Percentage__c &gt;1</errorConditionFormula>
        <errorMessage>Percentage cannot be greater than 1.</errorMessage>
    </validationRules>
</CustomObject>